--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-251.1KB/s(Youtube:不良林), server: zh01lv5uk01.feiguayun.xyz, port: 35087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
-  - {name: 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.64MB/s(Youtube:不良林), server: zh01lv5hk07.feiguayun.xyz, port: 31087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
-  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: zh01lv5ca02.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
-  - {name: 🇨🇳 中国-3.89MB/s(Youtube:不良林), server: zh01lv5hk04.feiguayun.xyz, port: 11087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
-  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: vfly5.xyz, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly5.xyz}}
-  - {name: 🇨🇳 中国-504.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
-  - {name: 🇨🇳 中国-477.1KB/s(Youtube:不良林), server: zh01lv5jp02.feiguayun.xyz, port: 32087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
-  - {name: 🇨🇳 中国-583.1KB/s(Youtube:不良林), server: zh01lv5hk03.feiguayun.xyz, port: 11087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
+  - {name: 🇯🇵 日本-6.23MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇰🇷 韩国-4.49MB/s(Youtube:不良林), server: 13.125.218.170, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 伊朗-1.96MB/s(Youtube:不良林), server: mci.myandroidplus1.ir, port: 80, type: vmess, uuid: c1214c26-f0fc-2f0a-81b0-84d10f8d14dc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api, ws-headers: {Host: mci.myandroidplus1.ir}}
+  - {name: 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇰🇷 韩国-956.2KB/s(Youtube:不良林), server: 3.38.253.198, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
+  - {name: 🇳🇱 荷兰-679.6KB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇳🇱 荷兰-671.3KB/s(Youtube:不良林), server: 213.183.59.211, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇳🇱 荷兰-409.5KB/s(Youtube:不良林), server: 213.183.59.211, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.49MB/s(Youtube:不良林)
+      - 伊朗-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-956.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-679.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-671.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-409.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.49MB/s(Youtube:不良林)
+      - 伊朗-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-956.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-679.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-671.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-409.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.49MB/s(Youtube:不良林)
+      - 伊朗-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-956.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-679.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-671.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-409.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.49MB/s(Youtube:不良林)
+      - 伊朗-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-956.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-679.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-671.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-409.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.49MB/s(Youtube:不良林)
+      - 伊朗-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-956.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-679.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-671.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-409.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.49MB/s(Youtube:不良林)
+      - 伊朗-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-956.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-679.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-671.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-409.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.49MB/s(Youtube:不良林)
+      - 伊朗-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-956.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-679.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-671.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-409.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
