--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇭 瑞士-2.82MB/s(Youtube:不良林), server: 185.126.116.125, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: charge.starspace.link, port: 443, type: trojan, password: 8UnS7eSMi8OFKfje, sni: charge.starspace.link, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.70MB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15106, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
-  - {name: 🇨🇳 中国-163.8KB/s(Youtube:不良林), server: zh01lv5ca02.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 23c807f7-14ba-4f5d-8357-4c1afe17fd49}
-  - {name: 🇨🇳 中国-319.0KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇬🇧 英国-1.07MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.22MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
-  - {name: 🇺🇸 美国-460.4KB/s(Youtube:不良林), server: v4.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v4.ssrsub.com}}
-  - {name: 🇨🇳 中国-518.0KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 以色列-5.69MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 40040, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
+  - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: charge.starspace.link, port: 443, type: trojan, password: 8UnS7eSMi8OFKfje, sni: charge.starspace.link, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.09MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-473.5KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-310.0KB/s(Youtube:不良林), server: 213.183.59.190, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇺🇸 美国-303.4KB/s(Youtube:不良林), server: 45.61.174.36, port: 31325, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林), server: 213.183.53.177, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-460.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-460.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-460.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-460.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-460.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-460.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇭 瑞士-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-460.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
