--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 以色列-5.69MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 40040, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
-  - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: charge.starspace.link, port: 443, type: trojan, password: 8UnS7eSMi8OFKfje, sni: charge.starspace.link, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.09MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.85MB/s(Youtube:不良林), server: vfly5.xyz, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly5.xyz}}
+  - {name: 🇺🇸 美国-204.7KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
   - {name: 🇺🇸 美国-473.5KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-310.0KB/s(Youtube:不良林), server: 213.183.59.190, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 以色列-5.69MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 40040, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
+  - {name: 伊朗-2.19MB/s(Youtube:不良林), server: mci.myandroidplus1.ir, port: 80, type: vmess, uuid: c1214c26-f0fc-2f0a-81b0-84d10f8d14dc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api, ws-headers: {Host: mci.myandroidplus1.ir}}
   - {name: 🇺🇸 美国-303.4KB/s(Youtube:不良林), server: 45.61.174.36, port: 31325, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林), server: 213.183.53.177, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
   - {name: 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
   - {name: 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇨🇳 中国-3.21MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 以色列-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 伊朗-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 以色列-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 伊朗-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 以色列-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 伊朗-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 以色列-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 伊朗-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 以色列-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 伊朗-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 以色列-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 伊朗-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 以色列-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-473.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 以色列-5.69MB/s(Youtube:不良林)
+      - 伊朗-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-303.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
